fix gutter whitespace addition bug

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -195,6 +195,10 @@ footer a {
     color: var(--orange);
 }
 
+.row {
+    --bs-gutter-x: 0;
+}
+
 /* media query for tablets */
 
 @media screen and (min-width:768px) {
